[package]
name = "rust-rest-boilerplate"
version = "0.1.0"
authors = ["Hui-Z"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
# Hyper used for HTTP server library
hyper = { version = "1.0.0-rc.1", features = ["full"] }
# Tokio runtime for Hyper
tokio = { version = "1.23.0", features = ["full"] }
http-body-util = "0.1.0-rc.1"
pretty_env_logger = "0.4"